Issue #3163138 by rkoller: Toggle buttons show square-cut borders due to their hidden overflow on transition

--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -111,6 +111,7 @@ $maxWidth: 520px;
       width: 100%;
       height: 100%;
       overflow: hidden;
+      clip-path: circle(24px at 50% 50%); // Fix Safari bug
       border: 4px solid transparent;
       border-radius: 12px;
       box-sizing: border-box;
